<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSongs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>